--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <!--
       This HTML file is a template.
