--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var infolinks_pid = 3157743;
       var infolinks_wsid = 0;
     </script>
-    <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+    <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script> -->
   </body>
 </html>
