--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <script>
-    // before React is loaded
-    if (typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === 'object') {
-        __REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function() {};
-    }
+    // before React is loaded - this code is to disable react developer tools in chrome.
+    // uncomment this for production ready
+    // if (typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === 'object') {
+    //     __REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function() {};
+    // }
     </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
